<resources>
    <string name="app_name">LoveLiveSIF_SongDatabase</string>
    <string name="action_settings">Settings</string>

    <!--Attribute strings -->
    <string name="smile_string" translatable="false">Smile</string>
    <string name="pure_string" translatable="false">Pure</string>
    <string name="cool_string" translatable="false">Cool</string>

    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>

    <!--Unit name color check -->
    <string name="AqoursText" translatable="false">Aqours</string>

    <!--Shared Preference strings-->
    <string name="db_songCount" translatable="false">dbSongCount</string>

    <!--Snackbar Strings -->
    <string name="NetworkError_Str">Network Error</string>
    <string name="NetworkErrorSnackbarAction_Str">Retry</string>
    <string name="Updating_Str">Updating...</string>

    <!-- Action Bar Icon Name -->
    <string name="action_sync" translatable="false">Sync</string>

    <!-- List Strings -->
    <string name="default_song_name">Default Song Name</string>
    <string name="default_unit_name">Default Unit Name</string>

    <!--Detail Caption Strings -->
    <string name="song_name">Song Name</string>
    <string name="romanized_name">Romanized Name</string>
    <string name="translated_name">Translated Name</string>
    <string name="unit_name">Unit Name</string>
    <string name="attribute_name">Attribute</string>
    <string name="song_length_name">Song Length</string>
    <string name="song_bpm_name">Song BPM (Beats Per Minute)</string>
    <string name="available_name">Available To Play</string>
    <string name="difficulty_name">Difficulty Name</string>
    <string name="difficulty_level_name">Difficulty Level</string>
    <string name="difficulty_notes_name">Note Count</string>

    <!--CardView Difficulty Names-->
    <string name="easy_string">Easy</string>
    <string name="normal_string">Normal</string>
    <string name="hard_string">Hard</string>
    <string name="expert_string">Expert</string>
    <string name="master_string">Master</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_song_item_detail">SongItemDetailActivity</string>
    <string name="title_detail_widget">Daily LLSIF Song</string>

    <!--string error cases-->
    <string name="UnsupportedOperation">UnsupportedOperationError</string>
    <string name="FragmentInteractionError">Must implement FragmentInteraction Interface</string>
    <string name="QueryUriUnknownError">Query URI not recognized</string>
    <string name="NoInformationAvailable">No Information Available</string>
    <string name="ErrorClosingStream">Error Closing Stream</string>
    <string name="SQLException">SQLException</string>

    <!--widget strings -->
    <string name="widget_song_title">Song Title</string>
    <string name="widget_unit_title">Main Unit</string>


    <!-- For TestAd -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
