<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:background="@color/colorDetailTextBox"
    android:id="@+id/difficulty_CardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/card_titleStyle"
                android:text="@string/difficulty_name"
                android:id="@+id/card_Difficulty_Name"/>

            <TextView
                style="@style/detail_textViewCaptionStyle"
                android:text="@string/difficulty_level_name" />

            <TextView
                style="@style/detail_textViewStyle"
                android:text="@string/difficulty_level_name"
                android:id="@+id/difficulty_level"/>

            <TextView
                style="@style/detail_textViewCaptionStyle"
                android:text="@string/difficulty_notes_name" />

            <TextView
                style="@style/detail_textViewStyle"
                android:text="@string/difficulty_notes_name"
                android:id="@+id/difficulty_notes"/>

        </LinearLayout>


</android.support.v7.widget.CardView>

</FrameLayout>

